syntax = "proto3";

package ai.metathings.service.deviced;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message GetConfigRequest {
	OpConfig config = 1 [(validator.field) = {msg_exists: true}];
}

message GetConfigResponse {
	Config config = 1;
}
